cse307/hw5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> block
Rule 1     block -> LBRACE inblock RBRACE
Rule 2     inblock -> smt inblock
Rule 3     inblock -> smt
Rule 4     smt -> print_smt
Rule 5     smt -> assign_smt
Rule 6     smt -> assign_index_smt
Rule 7     smt -> if_smt
Rule 8     smt -> if_else_smt
Rule 9     smt -> while_smt
Rule 10    while_smt -> WHILE LPAREN expression RPAREN block
Rule 11    if_smt -> IF LPAREN expression RPAREN block
Rule 12    if_else_smt -> IF LPAREN expression RPAREN block ELSE block
Rule 13    assign_smt -> NAME EQUALS expression SEMI
Rule 14    assign_index_smt -> NAME LBRACKET expression RBRACKET EQUALS expression SEMI
Rule 15    print_smt -> PRINT LPAREN expression RPAREN SEMI
Rule 16    expression -> NOT expression
Rule 17    expression -> expression PLUS expression
Rule 18    expression -> expression MINUS expression
Rule 19    expression -> expression TIMES expression
Rule 20    expression -> expression DIVIDE expression
Rule 21    expression -> expression FDIVIDE expression
Rule 22    expression -> expression MOD expression
Rule 23    expression -> expression POW expression
Rule 24    expression -> expression GT expression
Rule 25    expression -> expression GTE expression
Rule 26    expression -> expression LT expression
Rule 27    expression -> expression LTE expression
Rule 28    expression -> expression EQUALSS expression
Rule 29    expression -> expression NEQUALS expression
Rule 30    expression -> expression AND expression
Rule 31    expression -> expression OR expression
Rule 32    expression -> expression IN expression
Rule 33    expression -> num
Rule 34    expression -> str
Rule 35    expression -> bool
Rule 36    expression -> list
Rule 37    expression -> NAME
Rule 38    expression -> LPAREN expression RPAREN
Rule 39    expression -> expression LBRACKET expression RBRACKET
Rule 40    list -> LBRACKET innerlist RBRACKET
Rule 41    list -> LBRACKET RBRACKET
Rule 42    innerlist -> innerlist COMMA expression
Rule 43    innerlist -> expression
Rule 44    num -> NUMBER
Rule 45    str -> STRING
Rule 46    bool -> BOOLEAN

Terminals, with rules where they appear

AND                  : 30
BOOLEAN              : 46
COMMA                : 42
DIVIDE               : 20
ELSE                 : 12
EQUALS               : 13 14
EQUALSS              : 28
FDIVIDE              : 21
GT                   : 24
GTE                  : 25
IF                   : 11 12
IN                   : 32
LBRACE               : 1
LBRACKET             : 14 39 40 41
LPAREN               : 10 11 12 15 38
LT                   : 26
LTE                  : 27
MINUS                : 18
MOD                  : 22
NAME                 : 13 14 37
NEQUALS              : 29
NOT                  : 16
NUMBER               : 44
OR                   : 31
PLUS                 : 17
POW                  : 23
PRINT                : 15
RBRACE               : 1
RBRACKET             : 14 39 40 41
RPAREN               : 10 11 12 15 38
SEMI                 : 13 14 15
STRING               : 45
TIMES                : 19
WHILE                : 10
error                : 

Nonterminals, with rules where they appear

assign_index_smt     : 6
assign_smt           : 5
block                : 10 11 12 12 0
bool                 : 35
expression           : 10 11 12 13 14 14 15 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 38 39 39 42 43
if_else_smt          : 8
if_smt               : 7
inblock              : 1 2
innerlist            : 40 42
list                 : 36
num                  : 33
print_smt            : 4
smt                  : 2 3
str                  : 34
while_smt            : 9

Parsing method: LALR

state 0

    (0) S' -> . block
    (1) block -> . LBRACE inblock RBRACE

    LBRACE          shift and go to state 2

    block                          shift and go to state 1

state 1

    (0) S' -> block .



state 2

    (1) block -> LBRACE . inblock RBRACE
    (2) inblock -> . smt inblock
    (3) inblock -> . smt
    (4) smt -> . print_smt
    (5) smt -> . assign_smt
    (6) smt -> . assign_index_smt
    (7) smt -> . if_smt
    (8) smt -> . if_else_smt
    (9) smt -> . while_smt
    (15) print_smt -> . PRINT LPAREN expression RPAREN SEMI
    (13) assign_smt -> . NAME EQUALS expression SEMI
    (14) assign_index_smt -> . NAME LBRACKET expression RBRACKET EQUALS expression SEMI
    (11) if_smt -> . IF LPAREN expression RPAREN block
    (12) if_else_smt -> . IF LPAREN expression RPAREN block ELSE block
    (10) while_smt -> . WHILE LPAREN expression RPAREN block

    PRINT           shift and go to state 11
    NAME            shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14

    inblock                        shift and go to state 3
    smt                            shift and go to state 4
    print_smt                      shift and go to state 5
    assign_smt                     shift and go to state 6
    assign_index_smt               shift and go to state 7
    if_smt                         shift and go to state 8
    if_else_smt                    shift and go to state 9
    while_smt                      shift and go to state 10

state 3

    (1) block -> LBRACE inblock . RBRACE

    RBRACE          shift and go to state 15


state 4

    (2) inblock -> smt . inblock
    (3) inblock -> smt .
    (2) inblock -> . smt inblock
    (3) inblock -> . smt
    (4) smt -> . print_smt
    (5) smt -> . assign_smt
    (6) smt -> . assign_index_smt
    (7) smt -> . if_smt
    (8) smt -> . if_else_smt
    (9) smt -> . while_smt
    (15) print_smt -> . PRINT LPAREN expression RPAREN SEMI
    (13) assign_smt -> . NAME EQUALS expression SEMI
    (14) assign_index_smt -> . NAME LBRACKET expression RBRACKET EQUALS expression SEMI
    (11) if_smt -> . IF LPAREN expression RPAREN block
    (12) if_else_smt -> . IF LPAREN expression RPAREN block ELSE block
    (10) while_smt -> . WHILE LPAREN expression RPAREN block

    RBRACE          reduce using rule 3 (inblock -> smt .)
    PRINT           shift and go to state 11
    NAME            shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14

    smt                            shift and go to state 4
    inblock                        shift and go to state 16
    print_smt                      shift and go to state 5
    assign_smt                     shift and go to state 6
    assign_index_smt               shift and go to state 7
    if_smt                         shift and go to state 8
    if_else_smt                    shift and go to state 9
    while_smt                      shift and go to state 10

state 5

    (4) smt -> print_smt .

    PRINT           reduce using rule 4 (smt -> print_smt .)
    NAME            reduce using rule 4 (smt -> print_smt .)
    IF              reduce using rule 4 (smt -> print_smt .)
    WHILE           reduce using rule 4 (smt -> print_smt .)
    RBRACE          reduce using rule 4 (smt -> print_smt .)


state 6

    (5) smt -> assign_smt .

    PRINT           reduce using rule 5 (smt -> assign_smt .)
    NAME            reduce using rule 5 (smt -> assign_smt .)
    IF              reduce using rule 5 (smt -> assign_smt .)
    WHILE           reduce using rule 5 (smt -> assign_smt .)
    RBRACE          reduce using rule 5 (smt -> assign_smt .)


state 7

    (6) smt -> assign_index_smt .

    PRINT           reduce using rule 6 (smt -> assign_index_smt .)
    NAME            reduce using rule 6 (smt -> assign_index_smt .)
    IF              reduce using rule 6 (smt -> assign_index_smt .)
    WHILE           reduce using rule 6 (smt -> assign_index_smt .)
    RBRACE          reduce using rule 6 (smt -> assign_index_smt .)


state 8

    (7) smt -> if_smt .

    PRINT           reduce using rule 7 (smt -> if_smt .)
    NAME            reduce using rule 7 (smt -> if_smt .)
    IF              reduce using rule 7 (smt -> if_smt .)
    WHILE           reduce using rule 7 (smt -> if_smt .)
    RBRACE          reduce using rule 7 (smt -> if_smt .)


state 9

    (8) smt -> if_else_smt .

    PRINT           reduce using rule 8 (smt -> if_else_smt .)
    NAME            reduce using rule 8 (smt -> if_else_smt .)
    IF              reduce using rule 8 (smt -> if_else_smt .)
    WHILE           reduce using rule 8 (smt -> if_else_smt .)
    RBRACE          reduce using rule 8 (smt -> if_else_smt .)


state 10

    (9) smt -> while_smt .

    PRINT           reduce using rule 9 (smt -> while_smt .)
    NAME            reduce using rule 9 (smt -> while_smt .)
    IF              reduce using rule 9 (smt -> while_smt .)
    WHILE           reduce using rule 9 (smt -> while_smt .)
    RBRACE          reduce using rule 9 (smt -> while_smt .)


state 11

    (15) print_smt -> PRINT . LPAREN expression RPAREN SEMI

    LPAREN          shift and go to state 17


state 12

    (13) assign_smt -> NAME . EQUALS expression SEMI
    (14) assign_index_smt -> NAME . LBRACKET expression RBRACKET EQUALS expression SEMI

    EQUALS          shift and go to state 18
    LBRACKET        shift and go to state 19


state 13

    (11) if_smt -> IF . LPAREN expression RPAREN block
    (12) if_else_smt -> IF . LPAREN expression RPAREN block ELSE block

    LPAREN          shift and go to state 20


state 14

    (10) while_smt -> WHILE . LPAREN expression RPAREN block

    LPAREN          shift and go to state 21


state 15

    (1) block -> LBRACE inblock RBRACE .

    $end            reduce using rule 1 (block -> LBRACE inblock RBRACE .)
    ELSE            reduce using rule 1 (block -> LBRACE inblock RBRACE .)
    PRINT           reduce using rule 1 (block -> LBRACE inblock RBRACE .)
    NAME            reduce using rule 1 (block -> LBRACE inblock RBRACE .)
    IF              reduce using rule 1 (block -> LBRACE inblock RBRACE .)
    WHILE           reduce using rule 1 (block -> LBRACE inblock RBRACE .)
    RBRACE          reduce using rule 1 (block -> LBRACE inblock RBRACE .)


state 16

    (2) inblock -> smt inblock .

    RBRACE          reduce using rule 2 (inblock -> smt inblock .)


state 17

    (15) print_smt -> PRINT LPAREN . expression RPAREN SEMI
    (16) expression -> . NOT expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression FDIVIDE expression
    (22) expression -> . expression MOD expression
    (23) expression -> . expression POW expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression GTE expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression EQUALSS expression
    (29) expression -> . expression NEQUALS expression
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression IN expression
    (33) expression -> . num
    (34) expression -> . str
    (35) expression -> . bool
    (36) expression -> . list
    (37) expression -> . NAME
    (38) expression -> . LPAREN expression RPAREN
    (39) expression -> . expression LBRACKET expression RBRACKET
    (44) num -> . NUMBER
    (45) str -> . STRING
    (46) bool -> . BOOLEAN
    (40) list -> . LBRACKET innerlist RBRACKET
    (41) list -> . LBRACKET RBRACKET

    NOT             shift and go to state 24
    NAME            shift and go to state 29
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    BOOLEAN         shift and go to state 33
    LBRACKET        shift and go to state 30

    expression                     shift and go to state 23
    num                            shift and go to state 25
    str                            shift and go to state 26
    bool                           shift and go to state 27
    list                           shift and go to state 28

state 18

    (13) assign_smt -> NAME EQUALS . expression SEMI
    (16) expression -> . NOT expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression FDIVIDE expression
    (22) expression -> . expression MOD expression
    (23) expression -> . expression POW expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression GTE expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression EQUALSS expression
    (29) expression -> . expression NEQUALS expression
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression IN expression
    (33) expression -> . num
    (34) expression -> . str
    (35) expression -> . bool
    (36) expression -> . list
    (37) expression -> . NAME
    (38) expression -> . LPAREN expression RPAREN
    (39) expression -> . expression LBRACKET expression RBRACKET
    (44) num -> . NUMBER
    (45) str -> . STRING
    (46) bool -> . BOOLEAN
    (40) list -> . LBRACKET innerlist RBRACKET
    (41) list -> . LBRACKET RBRACKET

    NOT             shift and go to state 24
    NAME            shift and go to state 29
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    BOOLEAN         shift and go to state 33
    LBRACKET        shift and go to state 30

    expression                     shift and go to state 34
    num                            shift and go to state 25
    str                            shift and go to state 26
    bool                           shift and go to state 27
    list                           shift and go to state 28

state 19

    (14) assign_index_smt -> NAME LBRACKET . expression RBRACKET EQUALS expression SEMI
    (16) expression -> . NOT expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression FDIVIDE expression
    (22) expression -> . expression MOD expression
    (23) expression -> . expression POW expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression GTE expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression EQUALSS expression
    (29) expression -> . expression NEQUALS expression
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression IN expression
    (33) expression -> . num
    (34) expression -> . str
    (35) expression -> . bool
    (36) expression -> . list
    (37) expression -> . NAME
    (38) expression -> . LPAREN expression RPAREN
    (39) expression -> . expression LBRACKET expression RBRACKET
    (44) num -> . NUMBER
    (45) str -> . STRING
    (46) bool -> . BOOLEAN
    (40) list -> . LBRACKET innerlist RBRACKET
    (41) list -> . LBRACKET RBRACKET

    NOT             shift and go to state 24
    NAME            shift and go to state 29
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    BOOLEAN         shift and go to state 33
    LBRACKET        shift and go to state 30

    expression                     shift and go to state 35
    num                            shift and go to state 25
    str                            shift and go to state 26
    bool                           shift and go to state 27
    list                           shift and go to state 28

state 20

    (11) if_smt -> IF LPAREN . expression RPAREN block
    (12) if_else_smt -> IF LPAREN . expression RPAREN block ELSE block
    (16) expression -> . NOT expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression FDIVIDE expression
    (22) expression -> . expression MOD expression
    (23) expression -> . expression POW expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression GTE expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression EQUALSS expression
    (29) expression -> . expression NEQUALS expression
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression IN expression
    (33) expression -> . num
    (34) expression -> . str
    (35) expression -> . bool
    (36) expression -> . list
    (37) expression -> . NAME
    (38) expression -> . LPAREN expression RPAREN
    (39) expression -> . expression LBRACKET expression RBRACKET
    (44) num -> . NUMBER
    (45) str -> . STRING
    (46) bool -> . BOOLEAN
    (40) list -> . LBRACKET innerlist RBRACKET
    (41) list -> . LBRACKET RBRACKET

    NOT             shift and go to state 24
    NAME            shift and go to state 29
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    BOOLEAN         shift and go to state 33
    LBRACKET        shift and go to state 30

    expression                     shift and go to state 36
    num                            shift and go to state 25
    str                            shift and go to state 26
    bool                           shift and go to state 27
    list                           shift and go to state 28

state 21

    (10) while_smt -> WHILE LPAREN . expression RPAREN block
    (16) expression -> . NOT expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression FDIVIDE expression
    (22) expression -> . expression MOD expression
    (23) expression -> . expression POW expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression GTE expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression EQUALSS expression
    (29) expression -> . expression NEQUALS expression
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression IN expression
    (33) expression -> . num
    (34) expression -> . str
    (35) expression -> . bool
    (36) expression -> . list
    (37) expression -> . NAME
    (38) expression -> . LPAREN expression RPAREN
    (39) expression -> . expression LBRACKET expression RBRACKET
    (44) num -> . NUMBER
    (45) str -> . STRING
    (46) bool -> . BOOLEAN
    (40) list -> . LBRACKET innerlist RBRACKET
    (41) list -> . LBRACKET RBRACKET

    NOT             shift and go to state 24
    NAME            shift and go to state 29
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    BOOLEAN         shift and go to state 33
    LBRACKET        shift and go to state 30

    expression                     shift and go to state 37
    num                            shift and go to state 25
    str                            shift and go to state 26
    bool                           shift and go to state 27
    list                           shift and go to state 28

state 22

    (38) expression -> LPAREN . expression RPAREN
    (16) expression -> . NOT expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression FDIVIDE expression
    (22) expression -> . expression MOD expression
    (23) expression -> . expression POW expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression GTE expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression EQUALSS expression
    (29) expression -> . expression NEQUALS expression
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression IN expression
    (33) expression -> . num
    (34) expression -> . str
    (35) expression -> . bool
    (36) expression -> . list
    (37) expression -> . NAME
    (38) expression -> . LPAREN expression RPAREN
    (39) expression -> . expression LBRACKET expression RBRACKET
    (44) num -> . NUMBER
    (45) str -> . STRING
    (46) bool -> . BOOLEAN
    (40) list -> . LBRACKET innerlist RBRACKET
    (41) list -> . LBRACKET RBRACKET

    NOT             shift and go to state 24
    NAME            shift and go to state 29
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    BOOLEAN         shift and go to state 33
    LBRACKET        shift and go to state 30

    expression                     shift and go to state 38
    num                            shift and go to state 25
    str                            shift and go to state 26
    bool                           shift and go to state 27
    list                           shift and go to state 28

state 23

    (15) print_smt -> PRINT LPAREN expression . RPAREN SEMI
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . MINUS expression
    (19) expression -> expression . TIMES expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . FDIVIDE expression
    (22) expression -> expression . MOD expression
    (23) expression -> expression . POW expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . GTE expression
    (26) expression -> expression . LT expression
    (27) expression -> expression . LTE expression
    (28) expression -> expression . EQUALSS expression
    (29) expression -> expression . NEQUALS expression
    (30) expression -> expression . AND expression
    (31) expression -> expression . OR expression
    (32) expression -> expression . IN expression
    (39) expression -> expression . LBRACKET expression RBRACKET

    RPAREN          shift and go to state 39
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41
    TIMES           shift and go to state 42
    DIVIDE          shift and go to state 43
    FDIVIDE         shift and go to state 44
    MOD             shift and go to state 45
    POW             shift and go to state 46
    GT              shift and go to state 47
    GTE             shift and go to state 48
    LT              shift and go to state 49
    LTE             shift and go to state 50
    EQUALSS         shift and go to state 51
    NEQUALS         shift and go to state 52
    AND             shift and go to state 53
    OR              shift and go to state 54
    IN              shift and go to state 55
    LBRACKET        shift and go to state 56


state 24

    (16) expression -> NOT . expression
    (16) expression -> . NOT expression
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression FDIVIDE expression
    (22) expression -> . expression MOD expression
    (23) expression -> . expression POW expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression GTE expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression LTE expression
    (28) expression -> . expression EQUALSS expression
    (29) expression -> . expression NEQUALS expression
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression IN expression
    (33) expression -> . num
    (34) expression -> . str
    (35) expression -> . bool
    (36) expression -> . list
    (37) expression -> . NAME
    (38) expression -> . LPAREN expression RPAREN
    (39) expression -> . expression LBRACKET expression RBRACKET
    (44) num -> . NUMBER
    (45) str -> . STRING
    (46) bool -> . BOOLEAN
    (40) list -> . LBRACKET innerlist RBRACKET
    (41) list -> . LBRACKET RBRACKET
